<resources>
    <string name="app_name">GitHubUserAPI</string>

    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="input_username">Username</string>
    <string name="desc">desc</string>
    <string name="search_hint">Cari Username</string>
    <string name="creator">Create By MuhammadRevansyahRifkyAl-basith</string>

    <!-- Data Item User-->
    <string name="NameUser">Username</string>
    <string name="Name">Name</string>
    <string name="Followers">Followers</string>
    <string name="Following">Following</string>
    <string name="Company">Company</string>
    <string name="Location">Location</string>
    <string name="Repository">Repository</string>

    <!-- Option Menu-->
    <string name="MenuRefresh">Refresh</string>
    <string name="MenuSearch">Search</string>

    <string name="messageErrorSearch">Tidak Dapat Menemukan Username</string>
    <string name="value">value</string>


</resources>