<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.DetailUserActivity">

        <ProgressBar
            android:id="@+id/progressBarDetail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- PHOTO -->
        <ImageView
            android:id="@+id/img_photoUser"
            android:layout_width="130dp"
            android:layout_height="122dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <!-- NAME -->
        <TextView
            android:id="@+id/tv_itemName"
            style="@style/TextContent.Name"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/img_photoUser"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_photoUser"
            tools:text="@string/Name" />

        <!-- USERNAME -->
        <ImageView
            android:id="@+id/icUsername"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_baseline_people_alt_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_itemName" />

        <TextView
            android:id="@+id/tv_itemUsername"
            style="@style/TextContent.Username"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/icUsername"
            app:layout_constraintStart_toEndOf="@+id/icUsername"
            app:layout_constraintTop_toTopOf="@+id/icUsername"
            app:layout_constraintVertical_bias="0.48000002"
            tools:text="@string/NameUser" />

        <!-- FOLLOWERS -->

        <TextView
            android:id="@+id/tv_follower"
            style="@style/TextContent.TextView"
            android:layout_marginStart="35dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toEndOf="@+id/img_photoUser"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/value" />

        <TextView
            android:id="@+id/textFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Followers"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_follower"
            app:layout_constraintStart_toStartOf="@+id/tv_follower"
            app:layout_constraintTop_toBottomOf="@+id/tv_follower" />

        <!-- FOLLOWING -->
        <TextView
            android:id="@+id/tv_following"
            style="@style/TextContent.TextView"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_follower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toEndOf="@+id/tv_follower"
            app:layout_constraintTop_toTopOf="@+id/tv_follower"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/value" />

        <TextView
            android:id="@+id/textFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Following"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_following"
            app:layout_constraintStart_toStartOf="@+id/tv_following"
            app:layout_constraintTop_toBottomOf="@+id/tv_following" />

        <!-- COMPANY -->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_baseline_work_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_itemUsername" />

        <TextView
            android:id="@+id/tv_company"
            style="@style/TextContent.TextView"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            tools:text="@string/Company" />

        <!-- LOCATION -->
        <ImageView
            android:id="@+id/icLocation"
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_company" />

        <TextView
            android:id="@+id/tv_location"
            style="@style/TextContent.TextView"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/icLocation"
            app:layout_constraintStart_toEndOf="@+id/icLocation"
            app:layout_constraintTop_toTopOf="@+id/icLocation"
            tools:text="@string/Location" />

        <!-- REPOSITORY -->
        <TextView
            android:id="@+id/tv_repository"
            style="@style/TextContent.TextView"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textFollowing"
            app:layout_constraintStart_toStartOf="@+id/textFollowers"
            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
            tools:text="@string/value" />

        <TextView
            android:id="@+id/textRepository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Repository"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_repository"
            app:layout_constraintStart_toStartOf="@+id/tv_repository"
            app:layout_constraintTop_toBottomOf="@+id/tv_repository" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="267dp" />

        <!-- TAB FOLLOWERS & FOLLOWING -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:tabTextColor="@color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="746dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
